--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="emerald_on_primary">#FFFFFF</color>
     <color name="emerald_background">#F8FAFC</color> <color name="emerald_surface">#FFFFFF</color>
 
+    <color name="ozem_dark">#334155</color>
+
     <color name="black">#1E293B</color> <color name="white">#FFFFFF</color>
 
     <color name="ozem_primary">#10B981</color>      <color name="ozem_primary_dark">#047857</color> <color name="ozem_primary_light">#D1FAE5</color> <color name="ozem_accent">#0EA5E9</color>       <color name="ozem_accent_light">#E0F2FE</color> <color name="ozem_background">#F1F5F9</color>   <color name="ozem_card_bg">#FFFFFF</color>
