--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -334,6 +334,7 @@
                 android:baselineAligned="false">
 
                 <LinearLayout
+                    android:id="@+id/cardActionMed"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -350,7 +351,6 @@
                         android:layout_height="wrap_content"/>
 
                     <Button
-                        android:id="@+id/btnAddMed"
                         style="@style/Widget.MaterialComponents.Button.TextButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -360,10 +360,13 @@
                         android:minHeight="0dp"
                         android:padding="0dp"
                         android:insetTop="0dp"
-                        android:insetBottom="0dp"/>
+                        android:insetBottom="0dp"
+                        android:clickable="false"
+                        android:focusable="false"/>
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/cardActionTips"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -380,7 +383,6 @@
                         android:layout_height="wrap_content"/>
 
                     <Button
-                        android:id="@+id/btnEducation"
                         style="@style/Widget.MaterialComponents.Button.TextButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -390,10 +392,13 @@
                         android:minHeight="0dp"
                         android:padding="0dp"
                         android:insetTop="0dp"
-                        android:insetBottom="0dp"/>
+                        android:insetBottom="0dp"
+                        android:clickable="false"
+                        android:focusable="false"/>
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/cardActionReport"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -410,7 +415,6 @@
                         android:layout_height="wrap_content"/>
 
                     <Button
-                        android:id="@+id/btnExportSummary"
                         style="@style/Widget.MaterialComponents.Button.TextButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -420,7 +424,9 @@
                         android:minHeight="0dp"
                         android:padding="0dp"
                         android:insetTop="0dp"
-                        android:insetBottom="0dp"/>
+                        android:insetBottom="0dp"
+                        android:clickable="false"
+                        android:focusable="false"/>
                 </LinearLayout>
 
             </LinearLayout>
